force-app/main/default/objects/Document_Intake_File__c/Document_Intake_File__c.object-meta.xml
<CustomObject>
    <description>File-level work item for a document intake submission. Tracks each uploaded Salesforce File through splitting, category mapping, and AI review.</description>
    <label>Document Intake File</label>
    <nameField>
        <displayFormat>DIF-{00000000}</displayFormat>
        <label>Document Intake File Name</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Intake Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>