force-app/main/default/objects/Document_Intake_File__c/fields/Content_Hash__c.field-meta.xml
<CustomField>
    <fullName>Content_Hash__c</fullName>
    <description>Optional content hash supplied by the portal for the uploaded file.</description>
    <inlineHelpText>Optional file hash, such as SHA-256, used for audit and payload conflict detection when supplied.</inlineHelpText>
    <label>Content Hash</label>
    <length>128</length>
    <type>Text</type>
</CustomField>