force-app/main/default/objects/Document_Intake_File__c/fields/ContentDocument_Id__c.field-meta.xml
<CustomField>
    <fullName>ContentDocument_Id__c</fullName>
    <description>Source Salesforce File ContentDocument Id submitted for intake processing.</description>
    <inlineHelpText>15- or 18-character ContentDocument Id of the uploaded source file. Stored as text because custom lookups to ContentDocument are not supported.</inlineHelpText>
    <label>ContentDocument Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>