force-app/main/default/objects/Document_Intake_File__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <description>Document category selected by deterministic mapping or review fallback for this file.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated after the split output is mapped to an application document category. Low-confidence items may be placed in Others.</inlineHelpText>
    <label>Document Category</label>
    <referenceTo>clcommon__Document_Category__c</referenceTo>
    <relationshipLabel>Document Intake Files</relationshipLabel>
    <relationshipName>Document_Intake_Files</relationshipName>
    <type>Lookup</type>
</CustomField>