force-app/main/default/objects/Document_Intake_File__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Document type code produced by the splitter/classification step.</description>
    <inlineHelpText>Upper-snake-case document type detected for this split output, such as BANK_STATEMENT or W2.</inlineHelpText>
    <label>Document Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>