force-app/main/default/objects/Document_Intake_File__c/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <description>Failure details for this intake file item.</description>
    <inlineHelpText>Populated when splitting, mapping, or review cannot be started or completed for this file.</inlineHelpText>
    <label>Error Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>