force-app/main/default/objects/Document_Intake_File__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Original file name supplied by the portal for this uploaded Salesforce File.</description>
    <inlineHelpText>Original user-facing file name supplied with the intake request.</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>