force-app/main/default/objects/Document_Intake_File__c/fields/Intake_Job__c.field-meta.xml
<CustomField>
    <fullName>Intake_Job__c</fullName>
    <description>Parent document intake submission that owns this file work item.</description>
    <inlineHelpText>Parent intake job for this uploaded file.</inlineHelpText>
    <label>Intake Job</label>
    <referenceTo>Document_Intake_Job__c</referenceTo>
    <relationshipLabel>Document Intake Files</relationshipLabel>
    <relationshipName>Document_Intake_Files</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>