force-app/main/default/objects/Document_Intake_File__c/fields/Item_Key__c.field-meta.xml
<CustomField>
    <fullName>Item_Key__c</fullName>
    <description>Unique submission-and-file key used to prevent duplicate file work items.</description>
    <externalId>true</externalId>
    <inlineHelpText>Generated from the parent client submission key and ContentDocument Id.</inlineHelpText>
    <label>Item Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>