force-app/main/default/objects/Document_Intake_File__c/fields/Mapping_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Confidence__c</fullName>
    <description>Confidence score assigned when mapping a split file to a document category.</description>
    <inlineHelpText>Stores the deterministic or AI-assisted category mapping confidence as a percentage.</inlineHelpText>
    <label>Mapping Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>