force-app/main/default/objects/Document_Intake_File__c/fields/Split_Job__c.field-meta.xml
<CustomField>
    <fullName>Split_Job__c</fullName>
    <description>Splitter run created for this uploaded file.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated when async intake processing starts the headless PDF splitter for this file.</inlineHelpText>
    <label>Split Job</label>
    <referenceTo>Split_Job__c</referenceTo>
    <relationshipLabel>Document Intake Files</relationshipLabel>
    <relationshipName>Document_Intake_Files</relationshipName>
    <type>Lookup</type>
</CustomField>