force-app/main/default/objects/Document_Intake_File__c/fields/Split_Result_JSON__c.field-meta.xml
<CustomField>
    <fullName>Split_Result_JSON__c</fullName>
    <description>Normalized split result JSON for this intake file.</description>
    <inlineHelpText>Stores normalized split outputs after the splitter finishes. Downstream mapping and review read this payload.</inlineHelpText>
    <label>Split Result JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>