force-app/main/default/objects/Document_Intake_File__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status for this intake file work item.</description>
    <inlineHelpText>Updated automatically as this file moves through splitting, category mapping, and AI review.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
                <default>true</default>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Split_Queued</fullName>
                <label>Split Queued</label>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Needs_Mapping</fullName>
                <label>Needs Mapping</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>